--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,34 +1,33 @@
 name: "CI-CD Workflow"
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-    # Copy the repository to the directory on the server/VPS used for the application
   deploy:
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
+
     steps:
     - name: Copy dist to VPS
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v1.2.0
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
-        key: ${{ secrets.SSH_KEY }}
-        # Selecting all folders 
+        key: ${{ secrets.SSH_KEY }} 
         source: "."
-        # The path is based on the directory where the user logged into the server starts
-        target: "~/"
-    - name: Install and start
-      uses: appleboy/ssh-action@v1.2.0
+        target: "~/Project-Management-App"  
+    - name: Install and start application
+      uses: appleboy/ssh-action@v1.2.0  
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }}
         script: |
-            cd ~/Project-Management-App
-            npm install
-            cp .env.example .env
-            php artisan key:generate
-            php artisan db:seed
-            npm run dev
-            php artisan serve
-  
-        
+          cd ~/Project-Management-App
+          npm install
+          cp .env.example .env
+          php artisan key:generate
+          php artisan db:seed
+          npm run dev
+          php artisan serve --host=0.0.0.0 --port=8000
