--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -9,11 +9,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Checkout Code
+      uses: actions/checkout@v2
+      
     - name: Copy dist to VPS
       uses: appleboy/scp-action@master
       with:
         host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAM }}
+        username: ${{ secrets.USERNAME }}
         key: ${{ secrets.SSH_KEY }} 
         source: "."
         target: "~/Project-Management-App"  
