--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,7 +13,7 @@ jobs:
       uses: actions/checkout@v2
       
     - name: Copy dist to VPS
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v0.1.7
       env:
         HOST: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
