--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,6 +32,7 @@ jobs:
         key: ${{ secrets.SSH_KEY }}
         script: |
           cd ~/Project-Management-App
+          composer install
           npm install
           cp .env.example .env
           php artisan key:generate
