ok pour le commit

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 APP_NAME=Teamsync
-APP_ENV=local
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://teamsync.mardino.tech/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
