--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,9 +33,11 @@ jobs:
         script: |
           cd ~/Project-Management-App
           composer install
-          npm install
           cp .env.example .env
           php artisan key:generate
           php artisan db:seed
-          php artisan serve --host=0.0.0.0 --port=8000
+          php artisan cache:clear
+          php artisan migrate
+          npm install
           npm run build
+
