--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,10 @@ jobs:
         script: |
           cd ~/Project-Management-App
           cp .env.example .env
+          php artisan key:generate
+          php artisan db:seed
           php artisan cache:clear
+          php artisan migrate
+          npm install
           npm run build
 
