--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,6 +33,7 @@ jobs:
         script: |
           cd ~/Project-Management-App
           cp .env.example .env
+          composer install
           php artisan key:generate
           php artisan db:seed
           php artisan cache:clear
