--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -33,11 +33,12 @@ jobs:
         script: |
           cd ~/Project-Management-App
           cp .env.example .env
-          composer install
-          php artisan key:generate
-          php artisan db:seed
+          composer install --no-interaction --optimize-autoloader
+          echo "Packages installed"
+          php artisan key:generate --force
+          php artisan db:seed --force
           php artisan cache:clear
-          php artisan migrate
+          php artisan migrate --force
           npm install
           npm run build
 
